# straitjacket_macro

./: CHANGELOG.md  Cargo.toml  NOTICE  README.md
src/: lib.rs
tests/: straitjacket.rs
